--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,16 +16,27 @@ dependencies:
   flutter_bloc: ^8.1.2
   equatable: ^2.0.5
   flutter_native_splash: ^2.2.19
+  sqflite: ^2.2.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+
 flutter_native_splash:
   color: "#000000"
   image: lib/assets/emovied_logo.png
   android: true
   ios: true
+  android12: true
+
+android12:
+  image: lib/assets/emovied_logo.png
+  icon_background_color: "#FFFFFF"
+  image_dark: lib/assets/emovied_logo.png
+  icon_background_color_dark: "#000000"
+
+
 assets:
   - lib/assets/emovied_logo.png
 
